<resources>
    <string name="app_name">Hangouts</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="message">Message</string>
    <string name="Dark_green_theme">Dark Green theme</string>
    <string name="Green_theme">Green theme</string>
    <string name="dark_green_color">#017E86</string>
    <string name="green_color">#00A991</string>
    <string name="upsent" type="id">"you were absent for "</string>
    <string name="second" type="id">" second"</string>
    <string name="image">Image</string>
    <string name="mobile">mobile</string>
    <string name="choose_image">Choose image</string>
    <string name="add_contact">Contact is added</string>
    <string name="update_contact">Contact is updated</string>
    <string name="perrmisions">Permissions denied. You could granted permissions in setting app</string>
    <string name="delete_contact">Contact is deleted</string>
</resources>